A lot of styling, as well as begining of login form

--- a/proggraming_blog/src/css/layout/header.module.scss
+++ b/proggraming_blog/src/css/layout/header.module.scss
@@ -13,7 +13,12 @@
 
     .logo{
         font-family: 'Petit Formal Script', cursive;
+        font-style: normal;
+        font-weight: normal;
         font-size: 13px;
-        font-weight: 200;
+        line-height: 16px;
+        display: flex;
+        align-items: center;
+        text-align: center;
     }
 }
