--- a/proggraming_blog/src/css/page_specific/mainpage.module.scss
+++ b/proggraming_blog/src/css/page_specific/mainpage.module.scss
@@ -26,6 +26,6 @@
 }
 
 .laptop_pic{
-    height: 170px;
-    transform:translate(45vw,20vh);
+    height: 25vh;
+    transform:translate(45vw,25vh);
 }
