--- a/proggraming_blog/src/css/layout/base.module.css
+++ b/proggraming_blog/src/css/layout/base.module.css
@@ -1,6 +1,13 @@
 main {
   height: calc(100vh - 53px);
-  background-image: url("../../images/Base/TheSwirl.svg");
-  background-repeat: no-repeat;
+}
+
+main .swirl {
+  max-height: 100vh;
+  max-width: 100vw;
+  position: absolute;
+  z-index: -1;
+  -webkit-transform: scaleY(120%) translateY(53px);
+          transform: scaleY(120%) translateY(53px);
 }
 /*# sourceMappingURL=base.module.css.map */
