--- a/proggraming_blog/src/css/layout/base.module.scss
+++ b/proggraming_blog/src/css/layout/base.module.scss
@@ -3,6 +3,12 @@
 
 main{
     height: calc(100vh - 53px);
-    background-image: url('../../images/Base/TheSwirl.svg');
-    background-repeat: no-repeat;
+
+    .swirl{
+        max-height: 100vh;
+        max-width: 100vw;
+        position:absolute;
+        z-index: -1;
+        transform: scaleY(120%) translateY(53px);
+    }
 }
