--- a/proggraming_blog/src/css/layout/header.module.css
+++ b/proggraming_blog/src/css/layout/header.module.css
@@ -15,7 +15,16 @@
 
 .header .logo {
   font-family: 'Petit Formal Script', cursive;
+  font-style: normal;
+  font-weight: normal;
   font-size: 13px;
-  font-weight: 200;
+  line-height: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
 }
 /*# sourceMappingURL=header.module.css.map */
