--- a/proggraming_blog/src/css/layout/base.module.scss
+++ b/proggraming_blog/src/css/layout/base.module.scss
@@ -2,8 +2,41 @@
 
 
 main{
+
     height: calc(100vh - 53px);
 
+
+    #curved-corner-bottomright,
+    #curved-corner-topleft{
+        width: 100px;
+        height: 100px;
+        overflow: hidden;
+        position: relative;
+    }
+    
+    #curved-corner-bottomright:before,
+    #curved-corner-topleft:before{
+        content: "";
+        display: block;
+        width: 200%;
+        height: 200%;
+        position: absolute;
+        border-radius: 50%;
+    }
+
+    #curved-corner-bottomright:before {
+        bottom: 0;
+        right: 0;
+        box-shadow: 50px 50px 0 0 red;
+    }
+
+    #curved-corner-topleft:before {
+        top: 0;
+        left: 0;
+        box-shadow: -50px -50px 0 0 red;
+    }
+
+  
     .swirl{
         max-height: 100vh;
         max-width: 100vw;
