--- a/proggraming_blog/src/css/layout/header.module.css
+++ b/proggraming_blog/src/css/layout/header.module.css
@@ -26,5 +26,7 @@
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  text-decoration: none;
+  color: white;
 }
 /*# sourceMappingURL=header.module.css.map */
