--- a/proggraming_blog/src/css/layout/header.module.scss
+++ b/proggraming_blog/src/css/layout/header.module.scss
@@ -20,5 +20,7 @@
         display: flex;
         align-items: center;
         text-align: center;
+        text-decoration: none;
+        color: white;
     }
 }
