--- a/proggraming_blog/src/css/page_specific/registerpage.module.scss
+++ b/proggraming_blog/src/css/page_specific/registerpage.module.scss
@@ -13,10 +13,11 @@
 
 
 
-.loginwindow{
+.registerwindow{
     background-color: hsl(0, 0%, 15%);
     position: absolute;
-    height: 34vh;
+    height: 60vh;
+    max-height: 400px;
     width: 85%;
     border-radius: 20px;
     display: flex;
@@ -27,11 +28,12 @@
     h1{
         font-style: italic;
         font-weight: normal;
-        font-size: 20px;
+        font-size: 30px;
         line-height: 30px;
         display: flex;
         align-items: center;
         text-align: center;
         text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+        padding: 10px;
     }
 }
